Wed Nov  1 00:52:26 CET 2006 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, backgammon.h, Makefile.am: Move option parser to glib
	option parser, since it facilitates the integration of gnubg options
	with gtk options. getopt*.[ch] still needed for utility programs.

Wed Oct 25 11:36:58 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, backgammon.h, export.c, gnubg.c, gnubgmodule.c,
	gtkfile.c, gtkgame.c, gtkgame.h, gtkoptions.c, gtkprefs.c,
	gtktoolbar.c, html.c, latex.c, postscript.c, set.c, sgf.c, show.c,
	text.c: Moved file dialogs to gtk_file_chooser
	* gtkfile.h: new file
	* gtkpath.c gtkpath.h: removed

Wed Oct 18 14:54:34 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, configure.in, gtkgame.c, flags/.cvsignore,
	flags/Makefile.am: automake and install stuff for the new flags

Wed Oct 18 09:31:12 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, gnubg.c, gtkgame.c, postscript.c, sgf.c: charset
	conversion cleanup

Tue Oct 17 15:03:08 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* drawboard.c: avoid assuming length of translated strings

Mon Oct 16 15:45:49 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: Correct locales. Call language changes directly instead
	of through UserCommand.
	* gnubg.c: Use environment locale. Replace putenv by setenv.

Thu Oct  12 19:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gtkoptions.c, flags dir: Added new dialog to set language

Thu Oct  5 23:51:15 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: Fix compiler warnings without USE_PYTHON after last
	commit

Wed Oct  4 14:18:35 CEST 2006 Christian Anthon <anthon@kiku.dk>

	* Makefile.am analysis.c, analysis.h, formatgs.c, formatgs.h, html.c,
	text.c: minor changes to allow "relational show details"
	* database, database.example: rename
	* gtkgame.c, gtkgame.h, gtkrelational.c, gtkrelational.h,
	relational.c: detailed player stats in the CL version. List of all