@@ -1,3 +1,8 @@
+Thu Nov  2 20:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
+
+	* gtkgame.c + .h: Show 3 decimals for epc and include wastage
+	(By Ian Shaw)
+
 Wed Nov  1 00:52:26 CET 2006 Christian Anthon <anthon@kiku.dk>
 
 	* gnubg.c, backgammon.h, Makefile.am: Move option parser to glib
